# DeepWriter

./: .gitignore  README.md  pyproject.toml
docs/superpowers/specs/: 2026-05-28-paper-writing-agent-design.md
paper_writer_agent/: __init__.py  assembler.py  cli.py  library.py  markdown_builder.py  models.py  pdf_preprocessor.py  pipeline.py  providers.py  secret_store.py
tests/: test_library.py  test_local_assembler.py  test_markdown_builder.py  test_pdf_preprocessor.py  test_pipeline.py  test_secret_store.py  test_seed_provider.py
