[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "paper-writer-agent"
version = "0.1.0"
description = "LLM-first research paper extraction, auditing, repair, and writing context agent."
requires-python = ">=3.10"
dependencies = [
  "cryptography>=42.0.0",
  "PyMuPDF>=1.24.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0"
]

[project.scripts]
paper-agent = "paper_writer_agent.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
